--- a/public/style.css
+++ b/public/style.css
@@ -47,6 +47,7 @@ button {
     color: white;
     border: none;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 button:hover {
@@ -65,4 +66,5 @@ li {
     border-radius: 5px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
