--- a/public/style.css
+++ b/public/style.css
@@ -5,8 +5,9 @@ body {
     padding: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 100vh;
+    overflow: hidden;
 }
 
 .container {
@@ -15,6 +16,16 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
+    margin-right: 20px;
+}
+
+.expense-list-container {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-height: 100vh;
+    overflow-y: auto;
 }
 
 h1, h2 {
@@ -67,4 +78,15 @@ li {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    white-space: nowrap;
+    gap: 20px; /* Adiciona espaço entre as colunas */
+}
+
+li div:first-child {
+    flex: 1;
+    margin-right: 10px;
+}
+
+li div:last-child {
+    white-space: nowrap;
 }
